Fix issues, add mathOperations.lcc

--- a/reports/conventionalForm/index.html
+++ b/reports/conventionalForm/index.html
@@ -152,6 +152,10 @@
                 <em>(1:1)</em> é a linha e coluna onde a declaração de
                 função começou.
             </p>
+
+            <p>Foi inserido um novo exemplo de uso da linguagem no arquivo
+                <code>examples/mathOperations</code>.
+            </p>
         </div>
     </div>
 </body>
